feat: migrate scraped data to database